--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,20 @@
 .DS_Store
 *.pem
 
+# logs
+*.log
+*.log.*
+/logs
+logs/
+
+# cache
+*.cache
+.cache/
+/cache
+cache/
+*.*.cache
+*.cache.*
+
 # debug
 npm-debug.log*
 yarn-debug.log*
